# AGRO_tasks

./: Dockerfile  README.md  entrypoint.sh
custom_worlds/: package.xml  setup.cfg  setup.py
custom_worlds/config/: my_map.pgm
custom_worlds/launch/: agricultural.launch.py  map_server.launch.py
custom_worlds/models/: scaled_up_burger_model.sdf
custom_worlds/models/model_editor_models/C_fence/: fence.urdf  fence.urdf.xacro  model.config  model.sdf
custom_worlds/models/model_editor_models/Untitled/: model.sdf
custom_worlds/models/model_editor_models/materials/: mud.material
custom_worlds/models/model_editor_models/perimeter_fence/: model.sdf
custom_worlds/models/model_editor_models/shed/: model.sdf
custom_worlds/models/model_editor_models/table_1/: model.config  model.sdf
custom_worlds/models/model_editor_models/unit_cylinder/: model.sdf
custom_worlds/models/model_editor_models/water/: model.sdf
custom_worlds/models/model_editor_models/well/: model.sdf
custom_worlds/worlds/: agricultural.sdf  agricultural.world.sdf  turtlebot_agr.sdf
fer_cpp_moveit/: CMakeLists.txt
fer_gazebo/: setup.cfg  setup.py
fer_gazebo/launch/: fer_gazeb.launch.py  fer_gazebo.launch.py  spawn_fer.launch.py
fer_moveit/config/: fer.ros2_control.xacro  fer.urdf  moveit_controllers.yaml
fer_moveit/config/install/: setup.ps1
fer_moveit/config/log/: latest_build
fer_moveit/launch/: demo.launch.py  moveit_rviz.launch.py  static_virtual_joint_tfs.launch.py
install/: local_setup.sh  setup.sh
install/actions/share/actions/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_worlds/share/custom_worlds/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fer_cpp_moveit/lib/fer_cpp_moveit/: pick_place
install/fer_cpp_moveit/share/fer_cpp_moveit/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fer_gazebo/lib/fer_gazebo/: pick_place
install/fer_gazebo/share/fer_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fer_moveit/share/fer_moveit/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/franka_description/share/franka_description/: local_setup.sh  package.sh
install/gazebo_ros2_control/share/gazebo_ros2_control/: package.sh
install/gazebo_ros2_control_demos/lib/gazebo_ros2_control_demos/: example_diff_drive  example_effort  example_gripper  example_position  example_tricycle_drive  example_velocity
install/gazebo_ros2_control_demos/share/gazebo_ros2_control_demos/: local_setup.sh  package.sh
install/learn_one/share/learn_one/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_nav2_bringup/lib/my_nav2_bringup/: logger
install/my_nav2_bringup/share/my_nav2_bringup/: package.sh
install/occupancy_grid_demo/lib/occupancy_grid_demo/: astar_planner_node  grid_publisher
install/occupancy_grid_demo/share/occupancy_grid_demo/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/service_define/share/service_define/: local_setup.sh  package.dsv  package.ps1  package.sh
log/: latest_build  latest_list
my_nav2_bringup/: package.xml  setup.cfg  setup.py
my_nav2_bringup/config/: my_nav2_params.yaml
my_nav2_bringup/launch/: bringup.launch.py
my_nav2_bringup/maps/: my_map.yaml
my_nav2_bringup/rviz/: rviz.rviz
src/custom_worlds/: package.xml  setup.py
src/custom_worlds/materials/: mud.material
src/custom_worlds/models/model_editor_models/burger/: model.config  model.sdf
src/custom_worlds/models/model_editor_models/perimeter_fence/: model.config  model.sdf
src/custom_worlds/models/model_editor_models/shed/: model.sdf
src/custom_worlds/models/model_editor_models/water/: model.config  model.sdf
src/custom_worlds/models/model_editor_models/water/material/: water.material
src/custom_worlds/models/model_editor_models/well/: model.sdf
src/custom_worlds/models/model_editor_models/well_water/: model.config  model.sdf
src/fer_cpp_moveit/: package.xml
src/fer_cpp_moveit/src/: pick_place.cpp
src/fer_gazebo/: package.xml
src/fer_gazebo/fer_gazebo/: pick_place.py
src/fer_gazebo/launch/: fer_gazebo.launch.py  spawn_fer.launch.py
src/fer_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/fer_moveit/config/: custom_fer.ros2_control.xacro  fer.ros2_control.xacro  fer.urdf  fer.urdf.xacro  fer_gazebo.urdf  ros2_controllers.yaml  t.urdf
src/fer_moveit/launch/: fer_gazebo.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
src/install/: local_setup.sh
src/log/: latest_build
src/my_nav2_bringup/: setup.py  smoother_in_bt_xml_file.txt
src/my_nav2_bringup/launch/: bringup.launch.py
src/my_nav2_bringup/my_nav2_bringup/: logger.py
src/tiago_behavior_tree/: CMakeLists.txt  package.xml  pick_plugin.xml
src/tiago_behavior_tree/action/: ApproachObject.action
src/tiago_behavior_tree/bt_xml/: navigation_pick_place.xml
src/tiago_behavior_tree/src/: open_gripper_action_server.cpp  pick_action.cpp  pick_action.hpp
src/tiago_cpp/: package.xml
src/tiago_cpp/src/: pick_place_tiago.cpp
src/tiago_custom/: package.xml  setup.cfg  setup.py
src/tiago_custom/config/: Tiago_nav_params.yaml
src/tiago_custom/tiago_custom/: bridge_cmd.py
src/tiago_custom/worlds/: agricultural_world.sdf
tiago_behavior_tree/: CMakeLists.txt  pick_plugin.xml
tiago_behavior_tree/bt_xml/: navigation_pick_place.xml
tiago_behavior_tree/src/: pick_action.cpp
tiago_cpp/: CMakeLists.txt
tiago_custom/launch/: spawn.launch.py
tiago_custom/rviz/: tiago.rviz
(+160 files in other folders)
